--- a/NotePadJPA/.settings/org.eclipse.buildship.core.prefs
+++ b/NotePadJPA/.settings/org.eclipse.buildship.core.prefs
@@ -1,3 +1,3 @@
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.project.dir=../MVC
+connection.project.dir=../NotePadMVC
 eclipse.preferences.version=1
